<resources>
    <string name="app_name">CMPUT301W18T21</string>
    <string name="username">Username</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="request">Request</string>
    <string name="myRequests">My Task Requests:</string>
    <string name="myAssigned">My Assigned Tasks:</string>
    <string name="viewBidded">Bidded</string>
    <string name="viewAssigned">Assigned</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone Number</string>
    <string name="viewStatus">Status</string>
    <string name="email">Email Address</string>

    <string name="change_status">Change Task Status:</string>
    <string name="view_user">View User Profile</string>

    <string name="Task_with_Status_assigned">My Task with Status: Assigned</string>
    <string name="Back_button">Back</string>
    <string name="Save_button">Save</string>
    <string name="add_photo">Add photo</string>
    <string name="add_location">Location</string>
    <string name="assigned">assigned</string>
    <string name="done">done</string>
    <string name="accept">accept</string>
    <string name="decline">decline</string>
</resources>
